Backend and Frontend fixes
